--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "framer-motion": "^6.3.16",
-    "next": "12.2.0",
+    "next": "13.2.4",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
